[package]
name = "elegant-bouncer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
clap = {version = "4.0.26", features = ["derive"] }
colored = "2.0.0"
env_logger = "0.9.3"
log = "0.4.17"
lopdf = "0.29.0"

[profile.release]
debug = true