[package]
name = "elegantbouncer"
version = "0.2.0"
edition = "2021"

[lib]
name = "elegantbouncer"
path = "src/lib.rs"
test = false
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
clap = {version = "4.0.26", features = ["derive"] }
colored = "2.0.0"
crossterm = "0.27"
env_logger = "0.9.3"
hex = "0.4.3"
indicatif = "0.17"
log = "0.4.17"
lopdf = "0.29.0"
md5 = "0.7.0"
num_cpus = "1.16"
ratatui = "0.26"
rayon = "1.8"
rusqlite = "0.30"
sha1 = "0.10.6"
sha3 = "0.10.8"
tabled = {version = "0.14.0",  features = ["color"] } 
thiserror = "1.0.48"
walkdir = "2.4.0"

[profile.release]
debug = true
